# Ex5

./: CMakeLists.txt
exe/: client.out  clientSettings.txt  server.out
include/: AI.h  Board.h  BoardConsole.h  Client.h  Game.h  GameLogic.h  Human.h  Player.h  Point.h  Remote.h  UserInterface.h  UserPrinterConsole.h  VirtualRemote.h
server/: ClientHandler.cpp  ClientHandler.h  CloseCommand.cpp  CloseCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  GameSettings.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  ServerPrinter.cpp  ServerPrinter.h  SocketsNums.h  StartCommand.cpp  StartCommand.h  Task.cpp  Task.h  ThreadArgs.cpp  ThreadArgs.h  ThreadPool.cpp  ThreadPool.h  server_main.cpp
src/: AI.cpp  Client.cpp  Game.cpp  Human.cpp  Point.cpp  Remote.cpp  UserPrinterConsole.cpp  VirtualRemote.cpp  main.cpp
tests/: AITest.h  BoardTest.h  GameLogicTest.h  HumanTest.h  PointTest.h
